--- a/MyBlogServerSide/Pages/Index.razor
+++ b/MyBlogServerSide/Pages/Index.razor
@@ -1,9 +1,35 @@
 ﻿@page "/"
+@using MyBlog.Data.Interfaces
+@using MyBlog.Data.Models
+@inject IMyBlogApi api
 
-<PageTitle>Index</PageTitle>
+<button @onclick="AddSomePosts"> Add Some Posts</button>
+<ul>
+    @foreach (var item in posts)
+    {
+        <li>@item.Title</li>
+    }
+</ul>
 
-<h1>Hello, world!</h1>
+@code {
+    private List<BlogPost> posts = new List<BlogPost>();
 
-Welcome to your new app.
+    protected override async Task OnInitializedAsync()
+    {
+        posts = await api.GetBlogPostsAsync(10,0);
+        await base.OnInitializedAsync();
+    }
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+    protected async Task AddSomePosts()
+    {
+        for (var i = 0; i < 10; i++)
+        {
+            await api.SaveBlogPostAsync(new BlogPost()
+                {
+                    PublishDate = DateTime.Now,
+                    Title = $"Blog post{i}",
+                    Text = "Text"
+                });
+        }
+    }
+}
