--- a/MyBlogServerSide/_Imports.razor
+++ b/MyBlogServerSide/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using MyBlogServerSide
 @using MyBlogServerSide.Shared
+@using MyBlog.Data.Models
+@using MyBlog.Data.Interfaces
