--- a/MyBlogServerSide/Pages/Counter.razor
+++ b/MyBlogServerSide/Pages/Counter.razor
@@ -1,18 +1,23 @@
-﻿@page "/counter"
+﻿@page "/counterwithparameter"
 
 <PageTitle>Counter</PageTitle>
 
 <h1>Counter</h1>
 
-<p role="status">Current count: @currentCount</p>
+<p role="status">Current count: @CurrentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
 @code {
-    private int currentCount = 0;
+    [Parameter]
+    public int IncrementAmount { get; set; } = 1;
+    [Parameter]
+    public int CurrentCount { get; set; } = 0;
+
+    //private int currentCount = 0;
 
     private void IncrementCount()
     {
-        currentCount++;
+        CurrentCount+=IncrementAmount;
     }
 }
