--- a/MyBlogServerSide/Pages/Index.razor
+++ b/MyBlogServerSide/Pages/Index.razor
@@ -27,7 +27,7 @@
 
     protected async Task AddSomePosts()
     {
-        for (var i = 0; i < 10; i++)
+        for (var i = 1; i <= 10; i++)
         {
             await api.SaveBlogPostAsync(new BlogPost()
                 {
