--- a/MyBlogServerSide/Pages/Post.razor
+++ b/MyBlogServerSide/Pages/Post.razor
@@ -1,7 +1,8 @@
 ﻿@page "/post/{BlogPostId:int}"
 @inject IMyBlogApi api
 @inject NavigationManager navman
-@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage;
+@*@using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage;*@
+@using Markdig
 
 @if (blogPost!=null)
 {
@@ -9,14 +10,16 @@
 
     <PageTitle>@blogPost.Title</PageTitle>
     <HeadContent>
-      <meta property="og:title" content="@blogPost.Title">
-      <meta property="og:description" content="@(new string(blogPost.Text.Take(100).ToArray()))" />
-      <meta property="og:image" content="@($"{navman.BaseUri}/pathtoanimage.png")" />
-      <meta property="og:url" content="@navman.Uri" />
-      <meta name="twitter:card" content="@(new string(blogPost.Text.Take(100).ToArray()))" />
-      <h3>@blogPost.Title</h3>
-      @((MarkupString)blogPost.Text)
+        <meta property="og:title" content="@blogPost.Title">
+        <meta property="og:description" content="@(new string(blogPost.Text.Take(100).ToArray()))" />
+        <meta property="og:image" content="@($"{navman.BaseUri}/pathtoanimage.png")" />
+        <meta property="og:url" content="@navman.Uri" />
+        <meta name="twitter:card" content="@(new string(blogPost.Text.Take(100).ToArray()))" />
     </HeadContent>
+
+    <h3>@blogPost.Title</h3>
+    @*@((MarkupString)blogPost.Text)*@
+    @((MarkupString)Markdig.Markdown.ToHtml(blogPost.Text, Pipeline))
 }
 
 @code {
@@ -24,6 +27,14 @@
     public int blogPostId { get; set; }
 
     public BlogPost blogPost { get; set; }
+
+    MarkdownPipeline Pipeline;
+
+    protected override Task OnInitializedAsync()
+    {
+        Pipeline = new MarkdownPipelineBuilder().UseEmojiAndSmiley().Build();
+        return base.OnInitializedAsync();
+    }
 
     protected async override Task OnParametersSetAsync()
     {
