--- a/MyBlogServerSide/Pages/Admin/BlogPostList.razor
+++ b/MyBlogServerSide/Pages/Admin/BlogPostList.razor
@@ -1,5 +1,8 @@
 ﻿@page "/admin/blogposts"
 @inject IMyBlogApi api
+@attribute [Authorize]
+
+
 <a href="/admin/blogposts/new">New blog post</a>
 <ul>
     <Virtualize ItemsProvider="LoadPosts" Context="item">
