--- a/MyBlogServerSide/Pages/Admin/CategoryList.razor
+++ b/MyBlogServerSide/Pages/Admin/CategoryList.razor
@@ -1,6 +1,8 @@
 ﻿@page "/admin/categories"
 @using MyBlogServerSide.Components
 @inject IMyBlogApi api
+@attribute [Authorize]
+
 <h3>Categories</h3>
 
 <EditForm OnValidSubmit="Save" Model="Item">
