--- a/TmtsChecker/Shared/NavMenu.razor
+++ b/TmtsChecker/Shared/NavMenu.razor
@@ -15,8 +15,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-monitor" aria-hidden="true"></span> Host
+            <NavLink class="nav-link" href="assets">
+                <span class="oi oi-monitor" aria-hidden="true"></span> Assets
             </NavLink>
         </div>
         <div class="nav-item px-3">
