--- a/HashWorkerBlazor/Pages/_Layout.cshtml
+++ b/HashWorkerBlazor/Pages/_Layout.cshtml
@@ -14,6 +14,16 @@
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    
+    <!--jQuery-->
+    <script src="~/jquery-1.12.4.js"></script>
+    <!--jQuery-->
+    <!--SparkMD5-->
+    <script src="~/spark-md5.min.js"></script>
+    <!--SparkMD5-->
+    <!--Script for file hash-->
+    <script src="~/md5helper.js"></script>
+    <!--Script for file hash-->
 
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
