--- a/HashWorkerBlazor/Pages/Index.razor
+++ b/HashWorkerBlazor/Pages/Index.razor
@@ -8,6 +8,8 @@
 @using System.Text.Json
 @using System.Text.Encodings.Web
 @using System.Security.Cryptography
+@using OfficeOpenXml
+@using OfficeOpenXml.Style
 @using static HashWorkerBlazor.Tools.EncryptHelper
 @inject ISnackbar Snackbar
 @inject IHashWorkerApi api
@@ -29,18 +31,7 @@
     </MudItem>
 </MudGrid>
 <div class="p-1">
-@*    <MudButton Disabled="@(isLoading_scan || isLoading_send)" Variant="Variant.Filled" StartIcon="@Icons.Custom.Uncategorized.Radioactive" Color="Color.Warning" OnClick="@ScanBtnClick">
-        @if (isLoading_scan)
-        {
-            <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true" />
-            <MudText Class="ms-2">Processing</MudText>
-        }
-        else
-        {
-            <MudText>Scan Folder🈲</MudText>
-        }
-    </MudButton>*@
-    <MudButton Disabled="@(isLoading_scan || isLoading_send || itemList.Count()==0)" Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary" OnClick="@SendBtnClick">
+    <MudButton Disabled="@(isLoading_scan || isLoading_send || isLoading_export || itemList.Count()==0)" Variant="Variant.Filled" EndIcon="@Icons.Material.Filled.Send" Color="Color.Primary" OnClick="@SendBtnClick">
         @if (isLoading_send)
         {
             <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true" />
@@ -51,10 +42,20 @@
             <MudText>Send Hash</MudText>
         }
     </MudButton>
+    <MudButton Disabled="@(isLoading_scan || isLoading_send || isLoading_export || itemList.Count()==0)" Variant="Variant.Filled" StartIcon="@Icons.Custom.Uncategorized.Radioactive" Color="Color.Warning" OnClick="@ExportBtnClick">
+        @if (isLoading_export)
+        {
+            <MudProgressCircular Class="ms-n1" Size="Size.Small" Indeterminate="true" />
+            <MudText Class="ms-2">Processing</MudText>
+        }
+        else
+        {
+            <MudText>Export Excel</MudText>
+        }
+    </MudButton>
     <MudToggleIconButton Toggled="@isShowConsole" Icon="@Icons.Material.Filled.AlarmOff" Color="@Color.Error" Title="Off"
                          ToggledIcon="@Icons.Material.Filled.AlarmOn" ToggledColor="@Color.Success" ToggledTitle="On"
-                         ToggledChanged="OnToggledChanged"/>
-
+                         ToggledChanged="OnToggledChanged" />
     <span>Console Message is @(isShowConsole ? "On" : "Off")</span>
 </div>
 
@@ -98,6 +99,7 @@ else
     private List<HashContent> itemList = new List<HashContent>();
     private bool isLoading_scan = false;
     private bool isLoading_send = false;
+    private bool isLoading_export = false;
     Stopwatch sw = new Stopwatch();
 
     protected override async Task OnInitializedAsync()
@@ -117,7 +119,61 @@ else
         await base.OnAfterRenderAsync(firstRender);
     }
 
-    public async void OnToggledChanged(bool toggled)
+    public async Task GenerateExcel(IJSRuntime iJSRuntime)
+    {
+        byte[] fileContents;
+        ExcelPackage.LicenseContext = LicenseContext.NonCommercial;
+
+        using (var package = new ExcelPackage())
+        {
+            var workSheet = package.Workbook.Worksheets.Add("File Hash");
+
+            #region Header Row
+            workSheet.Cells[1, 1].Value = "No";
+            workSheet.Cells[1, 2].Value = "Hash";
+            workSheet.Cells[1, 3].Value = "FileName";
+            workSheet.Cells[1, 4].Value = "FileSize";
+            workSheet.Cells[1, 5].Value = "FilePath";
+
+            workSheet.Cells["A1:E1"].Style.Fill.PatternType = ExcelFillStyle.Solid;
+            workSheet.Cells["A1:E1"].Style.Fill.BackgroundColor.SetColor(System.Drawing.Color.PowderBlue);
+            workSheet.Cells["A1:E1"].Style.Font.Size = 12;
+            workSheet.Cells["A1:E1"].Style.Font.Bold = true;
+            workSheet.Cells["A1:E1"].Style.Border.BorderAround(ExcelBorderStyle.Hair);
+            #endregion
+
+            #region Body Row
+            for (int i = 0; i < itemList.Count(); i++)
+            {
+                workSheet.Cells[2 + i, 1].Value = itemList[i].No.ToString();
+                workSheet.Cells[2 + i, 2].Value = itemList[i].Hash.ToUpper();
+                workSheet.Cells[2 + i, 3].Value = itemList[i].FileName;
+                workSheet.Cells[2 + i, 4].Value = $"{itemList[i].FileSize:N0}";
+                workSheet.Cells[2 + i, 5].Value = itemList[i].FilePath;
+
+                workSheet.Cells[$"A{2 + i}:E{2 + i}"].Style.Font.Size = 12;
+                workSheet.Cells[$"A{2 + i}:E{2 + i}"].Style.Fill.PatternType = ExcelFillStyle.Solid;
+                workSheet.Cells[$"A{2 + i}:E{2 + i}"].Style.Fill.BackgroundColor.SetColor(System.Drawing.Color.Azure);
+                workSheet.Cells[$"A{2 + i}:E{2 + i}"].Style.Border.Top.Style = ExcelBorderStyle.Thin;
+                workSheet.Cells[$"A{2 + i}:E{2 + i}"].Style.Border.Left.Style = ExcelBorderStyle.Thin;
+                workSheet.Cells[$"A{2 + i}:E{2 + i}"].Style.Border.Right.Style = ExcelBorderStyle.Thin;
+                workSheet.Cells[$"A{2 + i}:E{2 + i}"].Style.Border.Bottom.Style = ExcelBorderStyle.Thin;
+            }
+            #endregion
+
+            workSheet.Cells["A:E"].AutoFitColumns();
+
+            fileContents = package.GetAsByteArray();
+        }
+
+        await iJSRuntime.InvokeVoidAsync(
+            "saveAsFile",
+            $"{itemList.First().FilePath.Split('/')?[0] ?? "FileHash"}-{DateTime.Now.ToString("yyyyMMddhhmmss")}.xlsx",
+            Convert.ToBase64String(fileContents)
+        );
+    }
+
+    private async void OnToggledChanged(bool toggled)
     {
         // Because variable is not two-way bound, we need to update it ourself
         isShowConsole = toggled;
@@ -134,7 +190,7 @@ else
         hashResult = $"found {totalCnt:N0} files";
         itemList.Clear();
         isLoading_scan = true;
-        
+
         sw.Restart();
     }
 
@@ -176,6 +232,28 @@ else
                 StateHasChanged();
             });
         }
+    }
+
+    private async Task ExportBtnClick()
+    {
+        if (itemList.Count == 0)
+        {
+            Snackbar.Add("Empty list!", Severity.Error);
+            return;
+        }
+        //
+        isLoading_export = true;
+        //
+        await Task.Delay(1);
+        //
+        await GenerateExcel(jsRuntime);
+        //var json = JsonSerializer.Serialize<List<HashContent>>(itemList, new JsonSerializerOptions { Encoder = JavaScriptEncoder.UnsafeRelaxedJsonEscaping });
+        //var account = (await authenticationStateProvider.GetAuthenticationStateAsync()).User.Identity?.Name ?? string.Empty;
+        //var result = await api.SendListAsync(account, json, SHA1Encrypt.genStrHash(json), itemList.Count());
+        //
+        //Snackbar.Add(result.msg, result.isOk ? Severity.Warning : Severity.Error);
+        //
+        isLoading_export = false;
     }
 
     private async Task SendBtnClick()
