--- a/SyncfusionSetup/Pages/_Layout.cshtml
+++ b/SyncfusionSetup/Pages/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Components.Web
-@namespace HashWorkerBlazor.Pages
+@namespace SyncfusionSetup.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
@@ -10,11 +10,15 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
-    <link href="HashWorkerBlazor.styles.css" rel="stylesheet" />
+    <link href="SyncfusionSetup.styles.css" rel="stylesheet" />
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
-    
+    <link href="_content/Syncfusion.Blazor.Themes/bootstrap5.css" rel="stylesheet" />
+    <!--Refer theme style sheet as below if you are using Syncfusion.Blazor Single NuGet-->
+    <!--<link href="_content/Syncfusion.Blazor/styles/bootstrap5.css" rel="stylesheet" />-->
+    <script src="_content/Syncfusion.Blazor.Core/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
+    <!--Use below script reference if you are using Syncfusion.Blazor Single NuGet-->
+    <!--<script  src="_content/Syncfusion.Blazor/scripts/syncfusion-blazor.min.js"  type="text/javascript"></script>-->
+
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
@@ -32,18 +36,5 @@
     </div>
 
     <script src="_framework/blazor.server.js"></script>
-
-    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
-
-    <!--jQuery-->
-    <script src="~/jquery-1.12.4.js"></script>
-    <!--jQuery-->
-    <!--SparkMD5-->
-    <script src="~/spark-md5.min.js"></script>
-    <!--SparkMD5-->
-    <!--Custom Scripts-->
-    <script src="~/md5helper.js"></script>
-    <script src="~/saveasfile.js"></script>
-    <!--Custom Scripts-->
 </body>
 </html>
